force-app/main/default/objects/Meter__c/Meter__c.object-meta.xml
<CustomObject>
    <description>Smart meter device registered to a customer Account.</description>
    <label>Meter</label>
    <pluralLabel>Meters</pluralLabel>
    <nameField>
        <label>Meter Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>