force-app/main/default/objects/Meter__c/fields/Account__c.field-meta.xml
<CustomField>
  <fullName>Account__c</fullName>
  <label>Account</label>
  <type>Lookup</type>
  <referenceTo>Account</referenceTo>
  <relationshipLabel>Meters</relationshipLabel>
  <relationshipName>Meters</relationshipName>
</CustomField>