force-app/main/default/objects/Meter__c/fields/External_Meter_Id__c.field-meta.xml
<CustomField>
  <fullName>External_Meter_Id__c</fullName>
  <label>External Meter Id</label>
  <type>Text</type>
  <length>60</length>
  <externalId>true</externalId>
  <unique>true</unique>
  <description>Join key to the smart-meter MDM / Data 360.</description>
</CustomField>