force-app/main/default/objects/Meter__c/fields/Installed_On__c.field-meta.xml
<CustomField>
  <fullName>Installed_On__c</fullName>
  <label>Installed On</label>
  <type>Date</type>
</CustomField>