force-app/main/default/objects/Meter__c/fields/Serial__c.field-meta.xml
<CustomField>
  <fullName>Serial__c</fullName>
  <label>Serial</label>
  <type>Text</type>
  <length>40</length>
</CustomField>