force-app/main/default/objects/Meter__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Strom</fullName><default>true</default><label>Strom</label></value>
            <value><fullName>Gas</fullName><default>false</default><label>Gas</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>